# automate-crypto

./: Dockerfile  LICENSE  README.md  config.toml  config_docker.toml  pyproject.toml
automate_crypto/: main.py
automate_crypto/kraken/: kraken.py
automate_crypto/util/: util.py
tests/: test_automate_crypto.py
